--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Leder-bord</title>
-    <!-- stylesheet -->
+    <!-- stylesheet Start -->
     <link rel="stylesheet" href="style.css" />
+    <!-- stylesheet End -->
+
+    <!-- Font Awesome link Start -->
+    <script
+      src="https://kit.fontawesome.com/f22baaf073.js"
+      crossorigin="anonymous"
+    ></script>
+    <!-- Font Awesome link End ----->
   </head>
   <body>
     <!-- Heder Start -->
@@ -45,7 +53,160 @@
             </div>
           </div>
         </div>
+        <hr />
+        <!-- Top-blog Start  -->
+        <div class="top-blog">
+          <h2 class="top-datiles">Top Blog</h2>
+          <div class="blogs">
+            <!--========= Article-Start-o1============= -->
+            <article class="blog">
+              <div class="thamline">
+                <img src="images/blogs/blog-1.png" alt="" />
+              </div>
+              <div class="blog-info">
+                <h3 class="blog-taitle">13 of My Favorite UI/UX Goodies</h3>
+                <p class="blog-author">
+                  By<a href=" Danny Sapio">Danny Sapio</a>
+                </p>
+              </div>
+            </article>
+            <!--========= Article-End============= -->
+
+            <!--========= Article-Start-02============= -->
+            <article class="blog">
+              <div class="thamline">
+                <img src="images/blogs/blog-2.png" alt="" />
+              </div>
+              <div class="blog-info">
+                <h3 class="blog-taitle">13 of My Favorite UI/UX Goodies</h3>
+                <p class="blog-author">
+                  By<a href=" Danny Sapio">Danny Sapio</a>
+                </p>
+              </div>
+            </article>
+            <!--========= Article-End============= -->
+
+            <!--========= Article-Start-03============= -->
+            <article class="blog">
+              <div class="thamline">
+                <img src="images/blogs/blog-3.png" alt="" />
+              </div>
+              <div class="blog-info">
+                <h3 class="blog-taitle">13 of My Favorite UI/UX Goodies</h3>
+                <p class="blog-author">
+                  By<a href=" Danny Sapio">Danny Sapio</a>
+                </p>
+              </div>
+            </article>
+            <!--========= Article-End============= -->
+
+            <!--========= Article-Start-04============= -->
+            <article class="blog">
+              <div class="thamline">
+                <img src="images/blogs/blog-4.png" alt="" />
+              </div>
+              <div class="blog-info">
+                <h3 class="blog-taitle">13 of My Favorite UI/UX Goodies</h3>
+                <p class="blog-author">
+                  By<a href=" Danny Sapio">Danny Sapio</a>
+                </p>
+              </div>
+            </article>
+            <!--========= Article-End============= -->
+          </div>
+        </div>
+        <!-- Top-Blog End -->
       </section>
+
+      <!--=========== Lattest-Blogs-Course-Start=============  -->
+      <section class="container">
+        <h2 class="top-datiles">Latest Course</h2>
+
+        <div class="courses">
+          <!-----========= Lattest COurse -01================== -->
+          <div class="course">
+            <div class="course-banner">
+              <img src="images/courses/course-1.png" alt="" />
+            </div>
+            <div class="course-detalies">
+              <h3 class="course-title">React - The Complete Guide 2022</h3>
+              <p class="course-author">Reed Krakoff</p>
+
+              <div class="course-info">
+                <div>
+                  <i class="fas fa-star flied"></i>
+                  <i class="fas fa-star flied"></i>
+                  <i class="fas fa-star flied"></i>
+                  <i class="fas fa-star flied"></i>
+                  <i class="fas fa-star empty"></i>
+                  <span>4.5</span>
+                </div>
+
+                <div class="course-duration">
+                  <i class="far fa-clock"></i>
+                  01:30hr
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-----========= Lattest COurse -01-End================== -->
+          <!-----========= Lattest COurse -02-Start ================== -->
+          <div class="course">
+            <div class="course-banner">
+              <img src="images/courses/course-2.png" alt="" />
+            </div>
+            <div class="course-detalies">
+              <h3 class="course-title">React - The Complete Guide 2022</h3>
+              <p class="course-author">Reed Krakoff</p>
+
+              <div class="course-info">
+                <div>
+                  <i class="fas fa-star flied"></i>
+                  <i class="fas fa-star flied"></i>
+                  <i class="fas fa-star flied"></i>
+                  <i class="fas fa-star flied"></i>
+                  <i class="fas fa-star empty"></i>
+                  <span>4.5</span>
+                </div>
+
+                <div class="course-duration">
+                  <i class="far fa-clock"></i>
+                  01:30hr
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-----========= Lattest COurse -02-End ================== -->
+          <!-----========= Lattest COurse -03-Start================== -->
+          <div class="course">
+            <div class="course-banner">
+              <img src="images/courses/course-3.png" alt="" />
+            </div>
+            <div class="course-detalies">
+              <h3 class="course-title">React - The Complete Guide 2022</h3>
+              <p class="course-author">Reed Krakoff</p>
+
+              <div class="course-info">
+                <div>
+                  <i class="fas fa-star flied"></i>
+                  <i class="fas fa-star flied"></i>
+                  <i class="fas fa-star flied"></i>
+                  <i class="fas fa-star flied"></i>
+                  <i class="fas fa-star empty"></i>
+                  <span>4.5</span>
+                </div>
+
+                <div class="course-duration">
+                  <i class="far fa-clock"></i>
+                  01:30hr
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-----========= Lattest COurse -03-End================== -->
+        </div>
+      </section>
+      <!--=========== Lattest-Blogs-Course -End =============  -->
     </main>
     <!-- Main End -->
   </body>
